force-app/main/default/objects/sked__Activity__c/sked__Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>