force-app/main/default/objects/sked__Activity__c/fields/sked__Copied_From_Id__c.field-meta.xml
<CustomField>
    <fullName>sked__Copied_From_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copied From Id</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>