force-app/main/default/objects/sked__Activity__c/fields/sked__End__c.field-meta.xml
<CustomField>
    <fullName>sked__End__c</fullName>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>