force-app/main/default/objects/sked__Activity__c/fields/sked__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>sked__Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>