force-app/main/default/objects/sked__Activity__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>