force-app/main/default/objects/sked__Activity__c/fields/sked__Templated_Activity__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Templated Activity</label>
    <referenceTo>sked__Templated_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>