force-app/main/default/objects/sked__Activity__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Blood Drive Support</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Logistics Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>After Hours Call Out Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Travel To</fullName>
            </value>
            <value>
                <fullName>Travel Back</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>