force-app/main/default/objects/sked__Activity__c/fields/sked_Activity_Resource_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Activity_Resource_Count__c</fullName>
    <label>Activity Resource Count</label>
    <summaryForeignKey>sked__Activity_Resource__c.sked__Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>