force-app/main/default/objects/sked__Activity__c/fields/sked_Activity_Title__c.field-meta.xml
<CustomField>
    <fullName>sked_Activity_Title__c</fullName>
    <label>Activity Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>