force-app/main/default/objects/sked__Activity__c/fields/sked_ARC_Region__c.field-meta.xml
<CustomField>
    <fullName>sked_ARC_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ARC Region</label>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>Activities (ARC Region)</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>