force-app/main/default/objects/sked__Activity__c/fields/sked_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>