force-app/main/default/objects/sked__Activity__c/fields/sked_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>sked_Day_of_Week__c</fullName>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>