force-app/main/default/objects/sked__Activity__c/fields/sked_District__c.field-meta.xml
<CustomField>
    <fullName>sked_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>sked_Territory__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>