force-app/main/default/objects/sked__Activity__c/fields/sked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>