force-app/main/default/objects/sked__Activity__c/fields/sked_Drive_Types__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Types__c</fullName>
    <description>Created for HRP-13121</description>
    <label>Drive Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Drive_Types</valueSetName>
    </valueSet>
</CustomField>