force-app/main/default/objects/sked__Activity__c/fields/sked_Duration__c.field-meta.xml
<CustomField>
    <fullName>sked_Duration__c</fullName>
    <formula>ROUND(((sked__End__c - sked__Start__c) * 1440),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>