force-app/main/default/objects/sked__Activity__c/fields/sked_Fixed_Site_Staff_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Staff_Quantity__c</fullName>
    <label>Fixed Site Staff Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>