force-app/main/default/objects/sked__Activity__c/fields/sked_Inherit_Resources_From_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Inherit_Resources_From_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inherit Resources From Drive</label>
    <type>Checkbox</type>
</CustomField>