force-app/main/default/objects/sked__Activity__c/fields/sked_Is_Group_Activity__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Group_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Activity</label>
    <type>Checkbox</type>
</CustomField>