force-app/main/default/objects/sked__Activity__c/fields/sked_Linked_Opportunity_Drives__c.field-meta.xml
<CustomField>
    <fullName>sked_Linked_Opportunity_Drives__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Opportunity Drives</label>
    <referenceTo>Linked_Opportunity_Drives__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>