force-app/main/default/objects/sked__Activity__c/fields/sked_Mobile_Staff_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Mobile_Staff_Quantity__c</fullName>
    <label>Mobile Staff Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>