force-app/main/default/objects/sked__Activity__c/fields/sked_NCE_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_NCE_Event_Name__c</fullName>
    <label>NCE Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>