force-app/main/default/objects/sked__Activity__c/fields/sked_Recurring_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked_Recurring_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Schedule</label>
    <referenceTo>sked__Recurring_Schedule__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>