force-app/main/default/objects/sked__Activity__c/fields/sked_Reduce_From_Staffing_Constraint__c.field-meta.xml
<CustomField>
    <fullName>sked_Reduce_From_Staffing_Constraint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce From Staffing Constraint</label>
    <type>Checkbox</type>
</CustomField>