force-app/main/default/objects/sked__Activity__c/fields/sked_Region__c.field-meta.xml
<CustomField>
    <fullName>sked_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>