force-app/main/default/objects/sked__Activity__c/fields/sked_Resource_Override__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Override</label>
    <referenceTo>sked__Resource_Override__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>sked_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>