force-app/main/default/objects/sked__Activity__c/fields/sked_Show_On_Calendar__c.field-meta.xml
<CustomField>
    <fullName>sked_Show_On_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Calendar</label>
    <type>Checkbox</type>
</CustomField>