force-app/main/default/objects/sked__Activity__c/fields/sked_Subtype__c.field-meta.xml
<CustomField>
    <fullName>sked_Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Culture Initiative</fullName>
            </value>
            <value>
                <fullName>In-Service</fullName>
            </value>
            <value>
                <fullName>Labor Relations</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Modified Duty</fullName>
            </value>
            <value>
                <fullName>National Bargaining</fullName>
            </value>
            <value>
                <fullName>Organizational Day</fullName>
            </value>
            <value>
                <fullName>Physicals</fullName>
            </value>
            <value>
                <fullName>Problem Management</fullName>
            </value>
            <value>
                <fullName>Post-Drive Breakdown</fullName>
            </value>
            <value>
                <fullName>Pre-Drive Setup</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Blood Run</fullName>
            </value>
            <value>
                <fullName>eBDR</fullName>
            </value>
            <value>
                <fullName>Inter-Region Support</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>ORC Beta</fullName>
            </value>
            <value>
                <fullName>After Hours Call Out Management</fullName>
            </value>
            <value>
                <fullName>Holiday Day Off</fullName>
            </value>
            <value>
                <fullName>Donor Outreach</fullName>
            </value>
            <value>
                <fullName>Health Fair</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Parade</fullName>
            </value>
            <value>
                <fullName>BHQ - Annual</fullName>
            </value>
            <value>
                <fullName>BHQ - BioArch R1</fullName>
            </value>
            <value>
                <fullName>BHQ - BioArch R2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>