force-app/main/default/objects/sked__Activity__c/fields/sked_Territory_Key__c.field-meta.xml
<CustomField>
    <fullName>sked_Territory_Key__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(sked_District__c)),
NOT(ISBLANK(sked_Collection_Operation__c))), CASESAFEID(sked_District__c) + &apos;:&apos; + CASESAFEID(sked_Collection_Operation__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Key</label>
    <type>Text</type>
</CustomField>