force-app/main/default/objects/sked__Activity__c/fields/sked_Vehicles_Allocated__c.field-meta.xml
<CustomField>
    <fullName>sked_Vehicles_Allocated__c</fullName>
    <label>Vehicles Allocated</label>
    <summaryFilterItems>
        <field>sked__Activity_Resource__c.sked_Resource_Type__c</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </summaryFilterItems>
    <summaryForeignKey>sked__Activity_Resource__c.sked__Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>