force-app/main/default/objects/sked__Activity__c/validationRules/sked__DateRangeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DateRangeValidation</fullName>
    <active>false</active>
    <description>Minutes from start to end must be longer than 0 but no greater than 24 hrs</description>
    <errorConditionFormula>OR(
   ROUND(((sked__End__c - sked__Start__c) * 1440),0) &gt; 1440,
   ROUND(((sked__End__c - sked__Start__c) * 1440),0) &lt;= 0.0
)</errorConditionFormula>
    <errorMessage>Activity date range must be greater than zero but no greater than 24 hrs</errorMessage>
</ValidationRule>