force-app/main/default/objects/sked__Activity__c/listViews/sked__AllActivities.listView-meta.xml
<ListView>
    <fullName>sked__AllActivities</fullName>
    <columns>sked_Activity_Title__c</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>NAME</columns>
    <columns>sked__Resource__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked__Start__c</columns>
    <columns>sked__End__c</columns>
    <columns>sked__Address__c</columns>
    <columns>sked_Is_Group_Activity__c</columns>
    <columns>sked_Linked_Drives__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>