force-app/main/default/objects/sked__Activity__c/listViews/Today_s_Tomorrow_s_Activites.listView-meta.xml
<ListView>
    <fullName>Today_s_Tomorrow_s_Activites</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>sked_Activity_Title__c</columns>
    <columns>sked__Resource__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked_Subtype__c</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sked_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>sked_Start_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Today&#39;s &amp; Tomorrow&#39;s Activites</label>
</ListView>